# jedisos

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  llm_config.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: llm_config.yaml
config/prompts/: auto_config_roles.yaml  fact_extractor.yaml  forge_code_gen.yaml  forge_query_gen.yaml  forge_test_gen.yaml  identity.yaml  intent_classifier.yaml
data/dspy/: intent_classifier_gemini_gemini-3-flash-preview.json
data/dspy/training/: fact_examples.yaml  intent_examples.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  BUILD_PLAYBOOK.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDE.md  FASTMCP_USAGE.md  HINDSIGHT_USAGE.md  LANGGRAPH_USAGE.md  LIBRARY_REFERENCE.md  LITELLM_USAGE.md  MCP_AUTH_PROXY_USAGE.md  MCP_EXTENSIONS.md  PHASE_VERIFICATION.md  RELEASE.md  RISKS_AND_DECISIONS.md  SELF_EVOLVING.md  TESTING_STRATEGY.md  TRACKING.md
docs/plans/: 2026-02-18-local-package-manager-design.md  2026-02-18-local-package-manager.md
scripts/: install.sh
src/jedisos/: __init__.py
src/jedisos/agents/: react.py  supervisor.py  worker.py
src/jedisos/channels/: telegram.py
src/jedisos/cli/: main.py
src/jedisos/core/: config.py  envelope.py  exceptions.py  types.py
src/jedisos/dspy_modules/: __init__.py  bridge.py  facts.py  intent.py  optimize.py
src/jedisos/forge/: context.py  decorator.py  generator.py  loader.py  security.py  tester.py
src/jedisos/llm/: auto_config.py  prompt_registry.py  prompts.py  router.py
src/jedisos/marketplace/: manager.py  models.py  scanner.py  validator.py
src/jedisos/mcp/: client.py  registry.py  server.py
src/jedisos/security/: audit.py  (+4 more)
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_agent_memory.py  test_hindsight_live.py  test_memory_live.py
tests/unit/: test_channels.py  test_dspy_modules.py  test_envelope.py  test_forge.py  test_llm_router.py  test_marketplace.py  test_mcp_tools.py  test_memory_mock.py  test_pdp.py  test_prompt_registry.py  test_react_agent.py  test_secvault.py  test_tool_loader.py  test_web_api.py
(+20 files in other folders)
